--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="customGreen">#86BF3E</color>
     <color name="customRed">#FC4B4E</color>
     <color name="customYellow">#FEC740</color>
+    <color name="hardGrey">#8A949F</color>
 </resources>
