--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -22,6 +22,17 @@
             android:paddingBottom="20dp"
             tools:layout_marginBottom="20dp">
 
+            <TextView
+                android:id="@+id/detail_meal_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:text="Explore"
+                android:textColor="@color/customBlack"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
             <ImageView
                 android:id="@+id/detail_meal_image"
                 android:layout_width="match_parent"
@@ -33,16 +44,18 @@
                 android:id="@+id/detail_meal_ingredient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:text="Ingredients"
                 android:textColor="@color/customBlack"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/detail_meal_list_ingre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -50,10 +63,10 @@
                 android:id="@+id/detail_meal_instruction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:text="Instructions"
                 android:textColor="@color/customBlack"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <androidx.viewpager2.widget.ViewPager2
