--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
                 android:text="Explore"
                 android:textColor="@color/customBlack"
                 android:textSize="30sp"
