--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -18,6 +18,7 @@
         android:text="TextView"
         android:textColor="@color/customBlack"
         android:textStyle="bold"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,6 +30,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="TextView"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
