--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,39 +1,59 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/customGreen"
     tools:context=".Fragments.InfoFragment">
 
-    <TextView
-        android:id="@+id/textAppName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MomKitchen"
-        android:textSize="24sp"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center_horizontal"/>
-
-    <TextView
-        android:id="@+id/textAppDescription"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description of the app goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:layout_below="@id/textAppName"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textDeveloper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Developer: Your Name"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:layout_below="@id/textAppDescription"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"/>
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/info_section"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_weight="1" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/info_next"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button"
+                android:text="Next"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/info_previous"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button"
+                android:text="Previous"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
